# poetry-test-issue-10259

./: .gitignore  pyproject.toml
