[project]
name = "poetry-test-issue-10259"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.poetry]
include = [
    { path = "poetry_test_issue_10259/myLibs", format = [
        "wheel",
    ] },
    { path = "myShellScript.ps1", format = [
        "wheel",
    ] },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
